--- a/ehr-epic-performance/ehr-epic-performance_test_methodology.adoc
+++ b/ehr-epic-performance/ehr-epic-performance_test_methodology.adoc
@@ -1,11 +1,11 @@
 ---
 sidebar: sidebar
 permalink: ehr-epic-performance/ehr-epic-performance_test_methodology.html
-keywords: test, methodology, generationio, tool, genio, storage, harware, software, vms 
+keywords: test, methodology, generationio, tool, genio, storage, harware, software, vms
 summary: The GenerationIO tool (GenIO) is used by Epic to validate that storage is production ready. This test focuses on performance by pushing storage to its limits and determining the headroom on storage controllers by ramping up until requirements fail.
 ---
 
-= Test Methodology
+= Test methodology
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,24 +18,24 @@ summary: The GenerationIO tool (GenIO) is used by Epic to validate that storage 
 // 2021-05-20 13:41:30.097635
 //
 
-== Test Plan
+== Test plan
 
 The GenerationIO tool (GenIO) is used by Epic to validate that storage is production ready. This test focuses on performance by pushing storage to its limits and determining the headroom on storage controllers by ramping up until requirements fail.
 
 The tests performed here are focused on determining headroom as well as using Adaptive Quality of Service (AQOS) to protect critical Epic workloads. For AFF A300 testing, two servers are used with GenIO loaded on both to drive I/O on the storage controllers. Three servers are used with GenIO loaded on all three to drive I/O on the AFF A700 storage controllers. Three servers are used because of server performance limits, and three servers are required for an AFF A700.
 
-== Test Environment
+== Test environment
 
-=== Hardware and Software
+=== Hardware and software
 
-For this study, we configured three Red Hat Linux virtual machines (VMs) on VMware ESXi 6.5 running on Cisco UCS B200-M5s. We connected the ESXi hosts to the AFF storage controller nodes with Cisco MDS- series switches by using 16Gb FC on the server side and 16Gb FC on the storage side. The AFF A700 nodes were connected to one DS2446 disk shelf with 3.8TB SSDs by following NetApp cabling best practices.
+For this study, we configured three Red Hat Linux virtual machines (VMs) on VMware ESXi 6.5 running on Cisco UCS B200-M5s. We connected the ESXi hosts to the AFF storage controller nodes with Cisco MDS-series switches by using 16Gb FC on the server side and 16Gb FC on the storage side. The AFF A700 nodes were connected to one DS2446 disk shelf with 3.8TB SSDs by following NetApp cabling best practices.
 
 The three tables below list the hardware and software components that we used for the Epic performance test configuration.
 
 The following table lists Epic Test hardware and software components.
 
 |===
-|Hardware and Software Components |Details
+|Hardware and software components |Details
 
 |Operating system for VM
 |RHEL 7.4 VMs
@@ -62,7 +62,7 @@ The following table lists Epic Test hardware and software components.
 The following table lists NetApp AFF A700 and AFF A300 storage system hardware and software.
 
 |===
-|Hardware and Software Components |AFF A700 Details |AFF A300 Details
+|Hardware and software components |AFF A700 details |AFF A300 details
 
 |Storage system
 |AFF A700 controller configured as a high-availability (HA) active-active pair
@@ -99,7 +99,7 @@ The following table lists NetApp AFF A700 and AFF A300 storage system hardware a
 The following table lists NetApp AFF A700 and AFF A300 storage system layout.
 
 |===
-|Storage Layout |AFF A700 Details |AFF A300 Details
+|Storage layout |AFF A700 details |AFF A300 details
 
 |SVM
 |Single SVM for Epic application databases
