--- a/cloud-insights/cloud-insights_additional_information.adoc
+++ b/cloud-insights/cloud-insights_additional_information.adoc
@@ -5,7 +5,7 @@ keywords: additional, information, product, documentation, cloud, insights
 summary: To learn more about the information that is described in this document, review the following websites
 ---
 
-= Additional Information
+= Additional information
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,7 +18,6 @@ summary: To learn more about the information that is described in this document,
 // 2021-05-20 15:58:38.837970
 //
 
-[.lead]
 To learn more about the information that is described in this document, review the following websites:
 
 * Cisco Product Documentation
@@ -36,5 +35,3 @@ https://cloud.netapp.com/cloud-insights[https://cloud.netapp.com/cloud-insights^
 * NetApp Product Documentation
 +
 https://docs.netapp.com[https://docs.netapp.com^]
-
-* TR-4868-1120
