--- a/cloud-insights/cloud-insights_netapp_cloud_insights_for_flexpod.adoc
+++ b/cloud-insights/cloud-insights_netapp_cloud_insights_for_flexpod.adoc
@@ -5,7 +5,7 @@ keywords: cloud, insights, flexpod, customer, value, technical, report, aff, sto
 summary: The solution detailed in this technical report is the configuration of the NetApp Cloud Insights service to monitor the NetApp AFF A800 storage system running NetApp ONTAP, which is deployed as a part of a FlexPod Datacenter solution.
 ---
 
-= NetApp Cloud Insights for FlexPod
+= TR-4868: NetApp Cloud Insights for FlexPod
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,11 +18,10 @@ summary: The solution detailed in this technical report is the configuration of 
 // 2021-05-20 15:58:38.799693
 //
 
-[.lead]
 Alan Cowles, NetApp
 
 The solution detailed in this technical report is the configuration of the NetApp Cloud Insights service to monitor the NetApp AFF A800 storage system running NetApp ONTAP, which is deployed as a part of a FlexPod Datacenter solution.
 
-== Customer Value
+== Customer value
 
 The solution detailed here provides value to customers who are interested in a fully-featured monitoring solution for their hybrid cloud environments, where ONTAP is deployed as the primary storage system. This includes FlexPod environments that use NetApp AFF and FAS storage systems.
